[tool.poetry]
name = "asx-ai-hedge-fund"
version = "0.1.0"
description = "AI-powered hedge fund analyst for the Australian Securities Exchange (ASX), compatible with OpenClaw"
authors = ["Leo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# LLM & Agent Orchestration
langchain = ">=0.3"
langchain-core = ">=0.3"
langgraph = ">=0.2"
langchain-openai = ">=0.2"
langchain-anthropic = ">=0.3"

# Data & Finance
yfinance = ">=0.2.36"
pandas = ">=2.0"
numpy = ">=1.24"

# Web Scraping & HTTP
httpx = ">=0.27"
beautifulsoup4 = ">=4.12"
lxml = ">=5.0"

# Models & Validation
pydantic = ">=2.0"

# CLI & Display
rich = ">=13.0"

# Environment
python-dotenv = ">=1.0"

[tool.poetry.group.optional.dependencies]
langchain-ollama = ">=0.2"
langchain-groq = ">=0.2"
langchain-google-genai = ">=2.0"
matplotlib = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
ruff = ">=0.1"

[tool.poetry.scripts]
asx-fund = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
